// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`classifiers can specialize multiple other classifiers: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Classifier",
          "children": [],
          "declaredName": "A",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Classifier",
          "children": [],
          "declaredName": "B",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Classifier",
          "children": [],
          "declaredName": "C",
          "heritage": [
            {
              "$type": "Subclassification",
              "elements": [],
              "targetRef": {
                "$type": "ClassifierReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Classifier",
                      "children": [],
                      "declaredName": "A",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
            {
              "$type": "Subclassification",
              "elements": [],
              "targetRef": {
                "$type": "ClassifierReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Classifier",
                      "children": [],
                      "declaredName": "B",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`specializations can be parsed: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Classifier",
          "children": [],
          "declaredName": "A",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Classifier",
          "children": [],
          "declaredName": "B",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Subclassification",
          "declaredName": "Super",
          "elements": [],
          "sourceRef": {
            "$type": "ClassifierReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Classifier",
                  "children": [],
                  "declaredName": "A",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "targetRef": {
            "$type": "ClassifierReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Classifier",
                  "children": [],
                  "declaredName": "B",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Subclassification",
          "elements": [
            {
              "$type": "Annotation",
              "elements": [],
              "source": {
                "$type": "Documentation",
                "about": [],
                "body": "/* unnamed */",
              },
            },
          ],
          "sourceRef": {
            "$type": "ClassifierReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Classifier",
                  "children": [],
                  "declaredName": "B",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "targetRef": {
            "$type": "ClassifierReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Classifier",
                  "children": [],
                  "declaredName": "A",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
      },
    ],
    "prefixes": [],
  },
}
`;
